syntax = "proto3";


package greet;

option go_package = ".;greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting =1;
}

message GreetResponse {
    string result = 1;
}

message GreateManyTimesRequest{
    Greeting greeting =1;
}

message GreateManyTimesResponse{
    string result = 1;
}

message LongGreateRequest{
    Greeting greeting =1;
}

message LongGreateResponse{
    string result = 1;
}


service GreetService{

    //unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    //streaming server
    rpc GreateManyTime(GreateManyTimesRequest) returns (stream GreateManyTimesResponse) {};

    //streaming client
    //note: jika client stream, maka method stream didefinisikan diawal
    rpc LongGreate(stream LongGreateRequest) returns (LongGreateResponse) {};
}